# vector_database

./: .gitignore  CMakeLists.txt  README.md  app.py  bench_scalar  bench_simd  benchmark.cpp  database.cpp  database.hpp  final_benchmark.cpp  main  main.cpp  numpy_benchmark.py  requirements.txt  run_benchmark.sh  run_final_benchmark.sh  run_sift_benchmark.sh  server.cpp  sift_benchmark.cpp  test
benchmarks/: hnswlib_benchmark.cpp  sift_benchmark.cpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  VectorHeatmap.jsx  index.css  main.jsx
frontend/src/pages/: ArchitecturePage.jsx
include/: database.hpp
scripts/: run_hnswlib_benchmark.sh  run_sift_benchmark.sh
src/: Save_file.cpp  bindings.cpp  database.cpp  database.hpp  database_manual_simd.cpp
